CompositeUtil - added logging of processing RestExtension instances
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>